Closed Bug 737120 Opened 12 years ago Closed 12 years ago

Flash plugins aren't cleaned up when click-to-play is enabled

Categories

(Firefox for Android Graveyard :: General, defect, P1)

ARM
Android
defect

Tracking

(Not tracked)

RESOLVED FIXED
Firefox 14

People

(Reporter: snorp, Assigned: snorp)

References

Details

Attachments

(1 file)

Sometimes (always?) when you navigate away from a page that had a Flash instance activated with click-to-play, the Flash surface will stick around. Usually this looks like a black or white square.
I don't know why the guard for mObjectFrame was in there in the first place, but that is null in the condition described in comment #0. This patch makes things work.
Attachment #607245 - Flags: review?(blassey.bugs) → review+
https://hg.mozilla.org/mozilla-central/rev/649612e70cfc
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 14
Depends on: 738198
Product: Firefox for Android → Firefox for Android Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: