Bug 737120 - Allow Flash plugin instances to be cleaned up on Android without an object frame present r=blassey